--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
-    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "passport": "^0.5.2",
