.env and sequelize fix attempt

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
-SECRET = poosyCat1@3$
 LOCALDB_URL = mysql://root:ElsaRoseyButterScotch@localhost:3000/techblog_db
+DB_NAME=techblog_db
+DB_ADDR=localhost
+DB_USER=root
+DB_PW=ElsaRoseyButterScotch
+SECRET = poosyCat1@3$
